# rapidgator-downloader-rs

./: Cargo.toml  LICENSE  README.md  config.yaml  files.txt
src/: downloader.rs  main.rs  models.rs  rg_endpoint.rs  url_parser.rs
