[package]
name = "rapidgator-downloader-rs"
version = "0.2.0"
edition = "2024"
authors = ["un4ckn0wl3z"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.140"
url = "2.5"
indicatif = "0.17.11"
colored = "3.0.0"
serde_yaml = "0.9.34"
chrono = "0.4.41"